# DCMTKTest

./: .gitignore  CMakeLists.txt
src/: Compress.cpp  main.cpp
src/net/: SCU.cpp  SCU.h  TestNet.cpp
